--- a/code-basics/design-patterns/pom.xml
+++ b/code-basics/design-patterns/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <!-- parent pom -->
         <groupId>com.de</groupId>
-        <artifactId>pocs</artifactId>
+        <artifactId>code-basics</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
