algoDs first commit

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,3 +37,6 @@ jobs:
 
       # run build !
       - run: mvn clean install
+      - store_artifacts:
+         path: target/site
+         destination: tr
