--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <configuration>
                     <aggregate>true</aggregate>
+                    <linkXRef>true</linkXRef>
                 </configuration>
                 <executions>
                     <execution>
