--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,6 @@ jobs:
 
       # run build !
       - run: mvn clean install
-      - store_test_results:
+      - store_artifacts:
          path: target/site
          destination: tr
