--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,10 @@ jobs:
       - store_artifacts:
          path: target/artifacts
          destination: /artifacts/
+      - store_artifacts:
+          path: target/site
+          destination: /data/reports
+
 
 #          ./code-basics/algorithms/target/algorithms-1.0-SNAPSHOT.jar
 #          ./code-basics/data-structures/target/data-structures-1.0-SNAPSHOT.jar
