generating test summary

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,13 +38,14 @@ jobs:
       # run build !
       - run: mvn clean install
       - run: mkdir target/artifacts
+      - run: mkdir target/reports/test
       - run: find . -type f -name '*.jar' -exec cp -at target/artifacts {} +
-      - run: find . -type f -path '*surefire-reports*/*' -name '*.xml' -exec cp -at target/site {} +
+      - run: find . -type f -path '*surefire-reports*/*' -name '*.xml' -exec cp -at target/reports/test {} +
       - store_artifacts:
          path: target/artifacts
          destination: /artifacts/
       - store_test_results:
-          path: target/site
+          path: target/reports/test
 
 
 
