--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,9 +37,10 @@ jobs:
 
       # run build !
       - run: mvn clean install
-      - run: mkdir -p target/artifacts target/reports/test
-      - run: find . -type f -name '*.jar' -exec cp -at target/artifacts {} +
-      - run: find . -type f -path '*surefire-reports*/*' -name '*.xml' -exec cp -at target/reports/test {} +
+      - run: ./dist/build.sh target/artifacts target/reports/test
+#      - run: mkdir -p target/artifacts target/reports/test
+#      - run: find . -type f -name '*.jar' -exec cp -at target/artifacts {} +
+#      - run: find . -type f -path '*surefire-reports*/*' -name '*.xml' -exec cp -at target/reports/test {} +
       - store_artifacts:
          path: target/artifacts
          destination: /artifacts/
