--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ jobs:
 
       # run build !
       - run: mvn clean install
+      - run: chmod +x ./dist/build.sh
       - run: ./dist/build.sh target/artifacts target/reports/test
 #      - run: mkdir -p target/artifacts target/reports/test
 #      - run: find . -type f -name '*.jar' -exec cp -at target/artifacts {} +
