--- a/use-cases/server-image/pom.xml
+++ b/use-cases/server-image/pom.xml
@@ -295,6 +295,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>2.12</version>
+                    </dependency>
+                </dependencies>
                 <executions>
                     <execution>
                         <id>integration-test</id>
@@ -302,7 +309,9 @@
                             <goal>integration-test</goal>
                             <goal>verify</goal>
                         </goals>
+
                         <configuration>
+                            <groups>com.de.use.cases.server.IntegrationTest</groups>
                             <runOrder>alphabetical</runOrder>
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <useSystemClassLoader>false</useSystemClassLoader>
