--- a/use-cases/server-image/pom.xml
+++ b/use-cases/server-image/pom.xml
@@ -317,6 +317,9 @@
                         <version>2.12</version>
                     </dependency>
                 </dependencies>
+                <configuration>
+                    <groups>com.de.use.cases.server.IntegrationTest</groups>
+                </configuration>
                 <executions>
                     <execution>
                         <id>integration-test</id>
@@ -324,9 +327,10 @@
                             <goal>integration-test</goal>
                             <goal>verify</goal>
                         </goals>
-
                         <configuration>
-                            <groups>com.de.use.cases.server.IntegrationTest</groups>
+                            <includes>
+                                <include>**/*.class</include>
+                            </includes>
                             <runOrder>alphabetical</runOrder>
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <useSystemClassLoader>false</useSystemClassLoader>
