--- a/use-cases/pom.xml
+++ b/use-cases/pom.xml
@@ -20,7 +20,7 @@
         <web.version>1.0-SNAPSHOT</web.version>
         <server.version>1.0-SNAPSHOT</server.version>
         <web.common.version>1.0-SNAPSHOT</web.common.version>
-        <product.abbreavtion>DE</product.abbreavtion>
+        <product.abbreavtion>de</product.abbreavtion>
         <app.install.dir>/opt/${product.abbreavtion}</app.install.dir>
     </properties>
 
