web server iamge

--- a/use-cases/server-image/pom.xml
+++ b/use-cases/server-image/pom.xml
@@ -280,10 +280,11 @@
                                     <POSTGRES_SERVICE>${product.db.image.name}</POSTGRES_SERVICE>
                                     <POSTGRES_USER>${product.abbreavtion}</POSTGRES_USER>
                                     <POSTGRES_PASSWORD>${product.abbreavtion}</POSTGRES_PASSWORD>
+                                    <PG_EXTERNAL_ACCESS_PORT>${db.port.http}</PG_EXTERNAL_ACCESS_PORT>
                                 </env>
 
                                 <wait>
-                                    <log>${product.db.image.name} database system is ready to accept connections at port ${db.port.http}</log>
+                                    <log>${product.db.image.name} database system is ready to accept connections</log>
                                     <time>20000</time>
                                 </wait>
                             </run>
