creating logs dir structure

--- a/use-cases/server-image/pom.xml
+++ b/use-cases/server-image/pom.xml
@@ -245,9 +245,9 @@
                                         <allowAllHosts>true</allowAllHosts>
                                     </http>
                                 </wait>
-                                <links>
-                                    <link>${product.db.image.name}:db</link>
-                                </links>
+<!--                                <links>-->
+<!--                                    <link>${product.db.image.name}:db</link>-->
+<!--                                </links>-->
                             </run>
                         </image>
 
