--- a/use-cases/server/pom.xml
+++ b/use-cases/server/pom.xml
@@ -18,6 +18,7 @@
     <properties>
         <assembly.id>product</assembly.id>
         <wildfly.version>17.0.0.Final</wildfly.version>
+        <product.assemble.dir>${project.build.directory}/assemble</product.assemble.dir>
     </properties>
 
     <dependencies>
@@ -31,6 +32,21 @@
     </dependencies>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${product.assemble.dir}</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
