--- a/use-cases/server-image/pom.xml
+++ b/use-cases/server-image/pom.xml
@@ -198,11 +198,11 @@
                                     <run>groupadd de -g 800</run>
                                     <run>useradd -u 811 --no-create-home --no-user-group --groups de -s /bin/sh ${product.image.name}</run>
                                     <run>mkdir -p /var${app.install.dir}</run>
-<!--                                    <run>mkdir -p /var${app.logs.dir}</run>-->
-                                    <run>export JAVA_OPTS="-Djava.util.logging.config.file=${app.logs.dir}/logging.properties"</run>
+                                    <run>mkdir -p /var${app.logs.dir}</run>
                                     <run>chown -R 811:800 /var${app.install.dir}</run>
                                     <run>chown -R 811:800 ${app.install.dir}</run>
                                     <run>chmod 755 ${server.install.dir}/server/bin/standalone.sh</run>
+                                    <run>export JAVA_OPTS="-Djava.util.logging.config.file=${app.logs.dir}/logging.properties"</run>
                                 </runCmds>
                                 <user>811</user>
                                 <assembly>
