--- a/use-cases/server/pom.xml
+++ b/use-cases/server/pom.xml
@@ -31,6 +31,15 @@
         </dependency>
     </dependencies>
     <build>
+        <resources>
+            <resource>
+                <directory>src/dist</directory>
+                <filtering>false</filtering> <!-- includes binary files -->
+                <includes>
+                    <include>**/*</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
