--- a/code-basics/pom.xml
+++ b/code-basics/pom.xml
@@ -22,6 +22,7 @@
         <module>algorithms</module>
         <module>data-structures</module>
         <module>design-patterns</module>
+        <module>multi-threadng</module>
     </modules>
 
     <dependencies>
