--- a/use-cases/application-server/pom.xml
+++ b/use-cases/application-server/pom.xml
@@ -29,6 +29,7 @@
     <modules>
         <module>web-common</module>
         <module>server-db</module>
+        <module>cache-db</module>
         <module>web-ejb</module>
         <module>sample-web</module>
         <module>server</module>
