--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,9 @@
 version: 2
 jobs:
   build:
-    docker:
+      machine:
       # specify the version you desire here
-      - image: circleci/openjdk:8-jdk
+      - image: ubuntu-1604:201903-01 # recommended linux image - includes Ubuntu 16.04, docker 18.09.3, docker-compose 1.23.1
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
