--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,8 @@
 version: 2
 jobs:
   build:
-      machine:
-      # specify the version you desire here
-      - image: ubuntu-1604:201903-01 # recommended linux image - includes Ubuntu 16.04, docker 18.09.3, docker-compose 1.23.1
-
+    machine:
+      image: ubuntu-1604:201903-01 # recommended linux image - includes Ubuntu 16.04, docker 18.09.3, docker-compose 1.23.1
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
