--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,11 +12,12 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
+    resource_class: 2xlarge
     working_directory: ~/repo
 
     environment:
       # Customize the JVM maximum heap limit
-      MAVEN_OPTS: -Xmx3200m
+      MAVEN_OPTS: -Xmx16400m
 
     steps:
       - checkout
