--- a/use-cases/application-server/server-image/pom.xml
+++ b/use-cases/application-server/server-image/pom.xml
@@ -394,7 +394,7 @@
                                 <!--suppress MavenModelInspection -->
                                 <app.web.server.test.port.https>${app.port.https}</app.web.server.test.port.https>
                                 <!--suppress MavenModelInspection -->
-                                <nom.api.gateway.container.id>${docker.container.${product.image.name}.id}</nom.api.gateway.container.id>
+                                <app.container.id>${docker.container.${product.image.name}.id}</app.container.id>
 
                             </systemPropertyVariables>
                         </configuration>
