--- a/use-cases/application-server/cache-db/pom.xml
+++ b/use-cases/application-server/cache-db/pom.xml
@@ -145,7 +145,7 @@
                                     <run>mkdir -p /var${cache.cluster.dir}</run>
                                     <run>chown -R 811:800 /var${cache.cluster.dir}</run>
                                     <run>chown -R 811:800 ${cache.cluster.dir}</run>
-                                    <run>chown 811:800 /tmp/install/startupscript.sh</run>
+                                    <run>chown 755 /tmp/install/startupscript.sh</run>
                                 </runCmds>
                                 <user>811</user>
                                 <assembly>
@@ -266,9 +266,9 @@
                         <version>2.12</version>
                     </dependency>
                 </dependencies>
-                <configuration>
-                    <groups>com.de.use.cases.server.IntegrationTest</groups>
-                </configuration>
+<!--                <configuration>-->
+<!--                    <groups>com.de.use.cases.server.IntegrationTest</groups>-->
+<!--                </configuration>-->
                 <executions>
                     <execution>
                         <id>integration-test</id>
